<resources>
    <string name="app_name">Family Map</string>
    <string name="email">Email:</string>
    <string name="email1">Email</string>
    <string name="server_host">Server Host:</string>
    <string name="host">Host</string>
    <string name="first_name">First Name:</string>
    <string name="first_name1">First Name</string>
    <string name="password">Password:</string>
    <string name="password1">Password</string>
    <string name="username">Username:</string>
    <string name="username1">Username</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="server_port">Server Port:</string>
    <string name="port">Port</string>
    <string name="last_name">Last Name:</string>
    <string name="last_name1">Last Name</string>
    <string name="family_map_login">Login</string>
    <string name="register">Register</string>
    <string name="log_in">Sign in</string>
    <string name="regiClick">You clicked register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menuSearch">Search</string>
    <string name="menuSettings">Settings</string>
    <string name="fileMenuSelectedMessage">You selected this button</string>
    <string name="menuTitle">TITLE</string>
    <string name="LifeString">Life Story Lines</string>
    <string name="LifeSubstring">SHOW LIFE STORY LINES</string>
    <string name="FamilyTreeString">Family Tree Lines</string>
    <string name="TreeSubstring">SHOW FAMILY TREE LINES</string>
    <string name="SpouseString">Spouse Lines</string>
    <string name="SpouseSubstring">SHOW SPOUSE LINES</string>
    <string name="FatherString">Father\'s Side</string>
    <string name="FatherSubstring">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="MotherString">Mother\'s Side</string>
    <string name="MotherSubstring">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="MaleString">Male Events</string>
    <string name="MaleSubstring">FILTER EVENTS BASED ON GENDER</string>
    <string name="FemaleString">Female Events</string>
    <string name="FemaleSubstring">FILTER EVENTS BASED ON GENDER</string>
    <string name="MenuSettingsTitle">Family Map: Settings</string>
    <string name="title_activity_maps">The Family MAP</string>
    <string name="mapFragmentMessage">Some message about the map</string>
    <string name="loginLabel">Family Map: Log In</string>
    <string name="mapLabel">Family Map: Map View</string>
    <string name="searchLabel">Family Map: Search</string>
    <string name="settingsLabel">Family Map: Settings</string>
    <string name="listEventsTitle">Life Events</string>
    <string name="listPeopleTitle">Family</string>
    <string name="spouse">Spouse</string>
    <string name="child">Child</string>
    <string name="mother">Mother</string>
    <string name="father">Father</string>

</resources>