<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SettingsConstraint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="275dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/LifeString"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/LifeSubstring"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/FamilyTreeString"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/TreeSubstring"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/SpouseString"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/SpouseSubstring"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/FatherString"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/FatherSubstring"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/MotherString"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/MotherSubstring"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/MaleString"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/MaleSubstring"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/FemaleString"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/FemaleSubstring"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/LifeSwitch"
                android:layout_width="75dp"
                android:layout_height="60dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/TreeSwitch"
                android:layout_width="75dp"
                android:layout_height="60dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/SpouseSwitch"
                android:layout_width="75dp"
                android:layout_height="60dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/FatherSwitch"
                android:layout_width="75dp"
                android:layout_height="60dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/MotherSwitch"
                android:layout_width="75dp"
                android:layout_height="60dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/MaleSwitch"
                android:layout_width="75dp"
                android:layout_height="60dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/FemaleSwitch"
                android:layout_width="75dp"
                android:layout_height="60dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/LogoutButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Sign Out"
        app:backgroundTint="#B60000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>